css/responseve.css
@media (min-width: 0px) and (max-width: 1400px){
  .ecosystem_list{
    overflow-x: scroll;
  }
}
@media (min-width: 0px) and (max-width: 1024px) {
  .mbscreen {
    transform: translateX(0) !important;
  }
  .grid {
    padding-left: 32px;
    padding-right: 32px;
  }
  .header_menu ul li a {
    font-size: 14px;
  }
  .service_list,
  .project_list,
  .our_list,
  .ncc_project-list {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
  }
  .ecosystem_list{
    overflow-x: scroll;
  }
  .survey_content-item {
    gap: 40px;
  }

  .survey_item > .text {
    font-size: 30px;
  }
}

@media (min-width: 0px) and (max-width: 886px){
  .header_menu ul li a {
    font-size: 11px;
    padding: 30px 15px;
  }
  .header_link .header_link-button a{
    font-size: 14px;
  }
  .survey_content-list {
    display: flex;
    gap: 40px;
  }
  .check_Weight {
    width: 55px;
  }
}
@media (min-width: 0px) and (max-width: 440px){
  .ecosystem_list {
    overflow-x: scroll;
  }
}


@media (max-width: 768px) {
  .header {
    display: flex;
    flex-direction: column-reverse;
  }
  .header_nav {
    height: 64px;
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 0 16px;
    position: fixed;
    width: 100%;
    top: 0;
    z-index: 999;
  }
  .header_logo {
    display: block;
  }
  .header_logo > img {
    width: 101.03px;
    height: 28px;
    display: flex;
    align-items: center;
  }
  .header-image {
    margin-top: 65px;
  }
  .menu-icon {
    display: block;
  }
  .header_menu {
    display: none;
  }
  .menu-icon-btn {
    border: none;
    background: none;
    align-items: center;
    display: flex;
  }
  .menu-icon-btn > img {
    width: 48px !important;
    height: 48px !important;
    background-color: var(--blue-color);
  }
  .navbar-collapse {
    display: none;
    background-color: var(--blue-color);
    width: 100%;
    height: 100vh;
    position: absolute;
    top: 60px;
    left: 0;
  }
  .navbar-collapse ul li {
    list-style: none;
    text-align: center;
    padding: 8px 0 16px 0;
    display: flex;
    flex-direction: column;
    align-items: center;
  }
  .navbar-collapse ul li a {
    font-weight: 400;
    font-size: 32px;
    line-height: 100%;
    color: var(--white-color);
  }
  .navbar-collapse-active {
    display: block;
  }
  .nav-button ul{
    padding: 0 16px;
  }
  .navbar-collapse ul .nav-item{
    border: 1px solid var(--white-color);
    padding: 16px;
    border-radius: 8px;
  }
  .navbar-collapse ul .nav-item_us{
    background-color: var(--white-color);
    border: 1px solid var(--blue-color);
    padding: 16px;
    border-radius: 8px;
  }
  .nav-button ul li{
    margin-bottom: 16px;
  }
  .nav-button ul .nav-item_us a{
    color: var(--blue-color);

  }
  /* end  header  */
  .our_image-img,
  .service_image-img,
  .project_image-img img {
    width: 88px !important;
    height: 88px !important;
  }

  .service_list {
    display: grid;
    grid-template-columns: 1fr;
    padding: 40px 0 0;
  }
  img {
    display: inline-block;
  }
  .our_item > p {
    font-size: 24px;
  }

  /* end .service  */
  .project,
  .family,
  .ncc_project,
  .contact {
    padding: 40px 0;
  }

  .service {
    padding: 40px 0%;
  }

  .grid-template {
    grid-gap: 40px;
  }

 .sub-button {
  display: none !important;

  }
  .sub-button-mb {
    display: block !important;
    position: unset;
    transform: none;
  }
  .link_dowmload-profile .text_download {
    font-size: 16px;
  }
  .icon>img {
    margin-top: 9px;
  }
  /* our team */
  .out-image_map .text {
    max-width: 280px;
    height: 200px;
  }
  /* end .project */
  .grid {
    padding: 0 16px;
  }
  .about {
    padding: 40px 0;
  }
  .about_list {
    grid-template-columns: repeat(1, 1fr);
    margin-top: 40px;
    grid-gap: 40px;
  }

  .about_item > p {
    margin-top: 0;
  }

  .about_image > img {
    width: 88px !important;
    height: 88px !important;
  }
  /* end about  */
  .our-image {
    padding: 40px 0 0;
  }

  .our {
    padding: 40px 0;
  }

  .heading h2 {
    font-size: 28px;
  }
  .heading p {
    font-size: 22px;
  }
  .our-image img {
    width: 100% !important;
    height: 100% !important;
  }
  .out-image_map {
    width: 100% !important;
    height: 100% !important;
  }
  .our_list {
    padding: 40px 0 0;
  }

  /* end our  */

  .family_image {
    padding-top: 36px;
  }
  /* end .family */
  .ecosystem{
    padding: 40px 0;
  }
  .ecosystem_list {
    overflow-x: scroll;
  }
  .ecosystem_item {
    display: flex;
    align-items: center;
    justify-content: center;
  }
  .ncc_project-progress {
    padding: 28px 24px;
  }
  .survey_game {
    grid-gap: 16px;
  }
  .ncc_project-content {
    padding: 0 8px;
  }
  .ncc_project-item {
    height: auto;
  }
  .ncc_project-item > h3 {
    font-size: 24px;
  }
  .ncc_project-button {
    padding: 36px 0;
  }

  .btn-send {
    padding: 36px 0 0;
  }

  .project_list,
  .ncc_project-box {
    margin-top: 36px;
  }
  .project_list{
    grid-template-columns: repeat(1, 1fr);

  }

  .ncc_project-content p {
    font-size: 20px;
  }
  .survey_item > .text{
    font-size: 24px;
  }

  .ncc_project-item input[type='radio']:after, .ncc_project-item input[type='radio']:checked:after {
    width: 16px;
    height: 16px;
    right: 12px;
  }
  .ncc_project-item input[type='radio']:checked:after {
    background-image: url(../assets/images/radio_button-nav.svg);
  }

   .ncc_project-list input[type='checkbox']:after, .ncc_project-list input[type='checkbox']:checked:after {
    width: 16px;
    height: 16px;
    top: 0;
    right: 12px;
    position: relative;
    content: '';
    display: inline-block;
    visibility: visible;
  }
  .ncc_project-list input[type='checkbox']:after {
    border: 2px solid var(--blue-1);
    border-radius: 50%;
  }
  .ncc_project-list input[type='checkbox']:checked:after {
    background-image: url(../assets/images/radio_button-nav.svg);
    border: none;
  }
  .survey_check label {
    padding-left: 35px;
  }
  .survey_check label:before {
    width: 24px;
    height: 24px;
  }
  .survey_check input[type="checkbox"]:checked ~ label:after {
    width: 24px;
    height: 24px;
    background-image: url(../assets/images/checkMobile.svg);
  }
  .ncc_project-item {
    padding: 32px 0 16px;
  }

  .ncc_project-image > img {
    width: 68px;
    height: 68px;
  }
  .survey_content-list{
    display: block;
  }
  .survey_content-item {
    display: block;
  }
  /* end .ncc_project */

  .contact_form {
    display: block;
    margin-top: 36px;
  }
  .contact_form-group {
    margin-bottom: 16px;
  }
  .contact_form-group,
  .contact_form-textarea {
    width: 100%;
  }
  .contact_form-textarea {
    margin-left: 0;
  }

  .footer_head-category {
    display: none;
  }
  .nav_footer {
    display: block;
    position: relative;
  }
  .nav_footer-head {
    display: flex;
    justify-content: space-between;
    border-bottom: 3px solid #aabff2;
    padding: 35px 110px 20px 0;
  }
  .footer_head-item-phone-text,
  .footer_head-item-email-text {
    padding-left: 22px;
  }
  .nav_footer-adreess {
    padding: 20px 0 36px 0;
    display: flex;
    flex-direction: column;
    gap: 16px;
  }

  /*  */
  .footer_bottom-container {
    padding: 16px 0;
  }
  /* popUp */
  .modal_popup,.mobile_popup {
    width: calc(100% - 30px);
    padding-bottom: 24px;
  }
  .modal_popup_main {
    flex-direction: column;
    align-items: center;
    padding: 20px 16px 0;
  }
  .modal-input {
    width: 100%;
    margin: 0 0 20px;
  }
  /* scroll view */
}

@media (max-width: 680px) {
  .heading .heading_text {
    width: 225px ;
  }
  .heading .heading-content {
    width: 240px;
  }
 .heading .heading_text-survey {
    width: 322px !important; 
 }
 .heading .heading-content-text {
  width: 265px;
}


  .heading .text-conten {
    font-size: 21px;
  }
  .nav_footer-head {
    padding: 35px 0 20px 0;
  }
  .footer_social-image {
    padding: 0 28px;
  }
  .nav_footer-adreess::before {
    content: " ";
    display: block;
    position: absolute;
    background-image: url(../assets/images/logo.png);
    background-repeat: no-repeat;
    background-position: 50% 0;
    background-size: cover;
    left: 17px;
    top: 190px;
    width: 330px;
    height: 330px;
    opacity: 0.1;
  }
  
  /* our team  */
  .out-image_map .text {
    max-width: 150px;
    height: 110px;
  }
  .title_name {
    font-size: 12px;
    line-height: 100%;
  }
  .title_position {
    font-size: 10px;
    line-height: 100%;
  }
  .title_description {
    font-size: 12px;
    line-height: 80%;
  }
}

